# dev-digest

./: .env.example  .gitignore  README.md
.github/workflows/: readme.yml  weekly-digest.yml
blog/app/: layout.tsx  page.tsx  sitemap.ts
blog/app/blog/posts/: 202408050811.mdx  202408060812.mdx  202408120818.mdx  greeting.mdx  result2.mdx
blog/app/components/: mdx.tsx
blog/app/og/: route.tsx
blog/app/rss/: route.ts
frontend/: bun.lockb  package.json
frontend/app/: page.tsx  sitemap.ts
frontend/app/blog/posts/: 202408120818.mdx  202408180824.mdx  202408190825.mdx  202408260901.mdx  202409020908.mdx  202409090915.mdx  202409230929.mdx  202409301006.mdx  202410071013.mdx  202410141020.mdx  202410211027.mdx  202410281103.mdx  202411041110.mdx  202411111117.mdx  202411181124.mdx  202411251201.mdx  202412021208.mdx  202412091215.mdx  202412161222.mdx  202412231229.mdx  202412300105.mdx  202501060112.mdx  202501130119.mdx  202501200126.mdx  202502050211.mdx  202502100216.mdx  202502170223.mdx  202502240302.mdx  202503030309.mdx  202503100316.mdx  202503170323.mdx  202503240330.mdx  202503310406.mdx  202504070413.mdx  202504140420.mdx  202504210427.mdx  202504280504.mdx  202505050511.mdx  202505120518.mdx  202505190525.mdx  (+30 more)
frontend/app/components/: footer.tsx  posts.tsx  text-animate.tsx
writer/: core.py  main.py  pyproject.toml  requirements.txt  scraper.py  summarizer.py
