[project]
name = "writer"
version = "0.1.0"
description = "GitHub Weekly Digest Writer - Scrapes trending repos and generates summaries using Google Gemini AI"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "google-genai>=1.31.0",
    "opencc-python-reimplemented>=0.1.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]

[project.scripts]
writer = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py", "scraper.py", "summarizer.py"]
